# beaver

./: .dialyzer_ignore.exs  .dockerignore  .formatter.exs  .gitignore  .restraint.exs  .tool-versions  CITATION.cff  CONSTITUTION.md  CONTRIBUTING.md  Dockerfile  LICENSE  LLVM_COMMIT  Makefile  README.md  build.zig  build.zig.zon  dev-requirements.txt  external_files.txt  fly.toml  livebook.dockerfile  mix.exs  nofile  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: elixir.yml  livebook-image.yml  release.yml  upstream.yml
apps/beaver/: .gitignore  README.md  mix.exs
apps/beaver/native/mlir_nif/met/: CMakeLists.txt
apps/beaver/native/mlir_nif/met/include/mlir-c/Beaver/: Op.h  PDL.h
apps/beaver/native/mlir_nif/met/include/mlir/CAPI/: Beaver.h
apps/beaver/native/mlir_nif/met/include/mlir/Dialect/: CMakeLists.txt
apps/beaver/native/mlir_nif/met/include/mlir/Dialect/Elixir/IR/: ElixirOps.td
apps/beaver/native/mlir_nif/met/lib/CAPI/: CMakeLists.txt  Elixir.cpp
apps/beaver/native/mlir_nif/met/nif/: CMakeLists.txt
apps/beaver/native/mlir_nif/met/nif/MLIR/: CMakeLists.txt
apps/beaver_capi/: README.md  mix.exs
apps/beaver_dialect/: .gitignore  README.md  mix.exs
apps/beaver_mlir/: .gitignore  README.md  mix.exs
apps/beaver_mlir/native/mlir_nif/met/llvm-project/: CMakeLists.txt
apps/beaver_nx/: .gitignore  README.md  mix.exs
apps/exotic/: .gitignore  README.md  mix.exs
apps/exotic/native/exotic_codegen/: Cargo.toml  README.md
apps/exotic/native/exotic_codegen/src/: lib.rs
apps/fizz/: .gitignore  README.md  mix.exs
apps/kinda/: .gitignore  README.md  mix.exs
apps/manx/: .gitignore  README.md  mix.exs
bench/: enif_add.ex  enif_add_benchmark.exs  enif_add_overhead.exs  enif_string_as_memref.ex  enif_support.ex  sort.exs
config/: config.exs  dev.exs  prod.exs  release-test.exs  test.exs
docker/: livebook.dockerfile
guides/: introducing-beaver.md  your-first-beaver-compiler.livemd
lib/: beaver.ex
lib/beaver/: application.ex  capturer.ex  changeset.ex  composer.ex  deferred.ex  diagnostic.ex  diagnostic_handler.ex  diagnostic_handler_runner.ex  diagnostics_capturer.ex  enif.ex  env.ex  exterior.ex  fallback_pass.ex  fallback_pattern.ex  generator.ex  mlir.ex  native.ex  pass_runner.ex  pattern.ex  printer.ex  sigils.ex  slang.ex  ssa.ex  string_printer.ex  view.ex  walker.ex
native/: .clangd  .gitignore  CMakeLists.txt  Makefile  build.zig  build.zig.zon  compile_commands.json  gen_wrapper.exs  update_generated.exs
native/aggregate/: CMakeLists.txt
native/aggregate/MLIR/: CMakeLists.txt
native/include/mlir-c/Beaver/: CallbackTypeDef.h  Context.h  Debug.h  Op.h  PDL.h  Pass.h  wrapper.h
native/include/mlir-c/Dialect/: Elixir.h
native/include/mlir/CAPI/: Beaver.h
native/include/mlir/Dialect/Elixir/IR/: ElixirDialect.td  ElixirOps.h
native/lib/CAPI/: Beaver.cpp
native/lib/Dialect/Elixir/IR/: CMakeLists.txt
native/mlir-c/: CMakeLists.txt  pre-built-llvm.cmake
native/mlir-c/aggregate/: CMakeLists.txt
native/mlir-c/aggregate/MLIR/: CMakeLists.txt
native/mlir-c/include/mlir-c/Beaver/: Op.h  Pass.h  wrapper.h
native/mlir-c/include/mlir/CAPI/: Beaver.h
native/mlir-c/include/mlir/Dialect/Elixir/IR/: ElixirOps.h  ElixirOps.td
native/mlir-c/lib/CAPI/: Beaver.cpp  CMakeLists.txt  Elixir.cpp
native/mlir-c/lib/Dialect/Elixir/IR/: CMakeLists.txt
native/mlir-c/llvm-project/: CMakeLists.txt
native/mlir-zig-proj/: .gitignore  build.zig  build.zig.zon  libs.zig
native/mlir-zig-proj/dev/: build.zig
native/mlir-zig-proj/mlir-c/include/mlir-c/Beaver/: Op.h  wrapper.h
native/mlir-zig-proj/mlir-c/include/mlir/CAPI/: Beaver.h
native/mlir-zig-proj/mlir-c/include/mlir/Dialect/Elixir/IR/: CMakeLists.txt  ElixirDialect.h
native/mlir-zig-proj/mlir-c/lib/: CMakeLists.txt
native/mlir-zig-proj/mlir-c/lib/CAPI/: Beaver.cpp  Elixir.cpp
native/mlir-zig-proj/mlir-c/lib/Dialect/Elixir/IR/: ElixirDialect.cpp  ElixirOps.cpp
native/mlir-zig-proj/prod/: build.zig
native/mlir-zig-proj/src/: diagnostic.zig  enif_list.zig  enif_support.zig  kinda_library.zig  main.zig  memref.zig  mlir_capi.zig  pass.zig  pointer.zig  prelude.zig  registry.zig  result.zig  runtime.zig  string_ref.zig  wrapper.zig
native/mlir-zig-proj/test/: build.zig
native/mlir-zig-src/: main.zig
native/mlir-zig/prod/: build.zig
native/mlir-zig/src/: beam.zig  kinda.zig  main.zig
native/mlir-zig/test/: build.zig
native/py_proj/: README.md  docker_prepare_elixir.sh  pyproject.toml
native/src/: diagnostic.zig  enif_list.zig  enif_support.zig  logical_mutex.zig  main.zig  memref.zig  mlir_capi.zig  pass.zig  pointer.zig  prelude.zig  registry.zig  rewrite_pattern.zig  runtime.zig  string_ref.zig  unranked_memref_descriptor.zig
native/tools/: json_to_inspection.exs
native/tools/ods-extract/: CMakeLists.txt  dump-ods.cpp  dump_ods.exs  json_to_ex.exs  mlir-pdll.cpp
native/tools/wrapper/: gen.exs  gen_header.exs  gen_stub.exs
profile/: cuda_runtime_overhead.exs  enif_add_overhead.exs
scripts/: autorun  build-for-publish.sh  docker_prepare_elixir.sh  get_libs.exs  install-prebuilt-llvm.sh  lldb-mix  lldb-mix-test  lldb-mix-test.sh  mix-format-wip.sh  test-docs.sh  update_generated.exs
scripts/zig/: func-reflection.zig  test.sh
test/: arith_test.exs  ast_ir.exs  ast_ir_test.exs  attribute_access_test.exs  attribute_collectable_test.exs  attribute_enumerable_test.exs  beaver_test.exs  block_test.exs  bytecode_test.exs  capi_test.exs  cf_test.exs  cuda_runtime_test.exs  debug_output_test.exs  debug_test.exs  defm_test.exs  diagnostic_test.exs  dialect_registery_test.exs  dialect_registry_test.exs  dialect_test.exs  e2e_test.exs  elixir_ast_dialect_test.exs  enif_test.exs  entity_test.exs  env_test.exs  expander_base_example.exs  expander_test.exs  exterior_test.exs  gen_ir_test.exs  generated_zig_test.exs  gpu_test.exs  irdl_test.exs  load_ir_test.exs  memref_descriptor_test.exs  memref_test.exs  mif_test.exs  module_access_test.exs  ods_dump_test.exs  ods_test.exs  op_prototype_test.exs  op_test.exs  (+20 more)
test/charm/: charm_test.exs
(+448 files in other folders)
